CHANGES for LIRE
================

2016-12-14
==========
  - Re-visited metric spaces indexing for QA
  - Implemented DocValues based search for MetricSpacesImageSearcher
  - Added TwelveMonkeys ImageIO libs to runtime in gradle.build, it's optional, but rather helpful
  - Added an extraction to base64 tool

2016-12-12
==========
  - Changed ACCID quantization (double -> short) and serialization (8 -> 2 bytes).

2016-12-12
==========
  - Added ACCID feature to LIRE and LireDemo (Thanks go to Chrysa and Nektarios)
  - Re-added some of the test cases in Gradle build file
  - removed photos with unclear licenses and added 10 with (CC) for testing

2016-12-07
==========
  - Fixed WorkItem to work with LireSolr
  - Fixed hash problem (moved to resources folder)

2016-12-07
==========
  - Switched to gradle for the main LIRE project.
  - Updated everything to latest Lucene version.

2016-11-25
==========
  - Updated documentation

2016-11-24
==========
  - Made liredemo and simpleapplication gradle based.

2016-01-28
==========
  - Mapped the number of key points for random selection from ParallelIndexer through to the end
  - Added security for small images in SimpleExtractor

2016-01-26
==========
  - Changed conversion of images to TYPE_3BYTE_BGR in ImageUtils.
  - Fixed a bug with GenericFastImageSearcher using multiple fields.
  - Added example for local feature based search.

2016-01-25
==========
  - Bugfix in ParallelIndexer, adding Preprocessor for images in local sampling routine
    (based on bug descrition of Myrtha Fuog)

2015-11-06
==========
  - Invalid character in comments removed (based on pull request of Bart Van Bos)
  - Adapted .gitignore from https://github.com/boeboe/LIRE/ fork
  - Adapted pom.xml from https://github.com/boeboe/LIRE/ fork

2015-09-23
==========
  - Fixed Extractor bug.

2015-09-22
==========
  - Changed MetricSpaces query mode to term boosting to reduce size of query.
  - Added statistics to docs.

2015-09-09
==========