@@ -1,12 +1,0 @@
-package net.semanticmetadata.lire.indexers.tools.text;
-
-import java.util.Iterator;
-
-/**
- * Reading a file from {@link ParallelExtraction} and writing it to a lucene index.
- */
-public class IndexWriter {
-    public static void main(String[] args) {
-        // todo ...
-    }
-}
